# index.js
@@ -6,7 +6,7 @@ const userRoute = require('./src/routes/UserRouter.js');
 const authRoute = require('./src/routes/auth.route');
 const swaggerRoute = require('./src/routes/swagger.route');
 
-const CharacterRoute = require('./src/routes/character.route');
+const InfluencerRoute = require('./src/routes/influencer.route');
 const port = process.env.PORT || 3001;
 const app = express();
 
@@ -14,12 +14,11 @@ connectDatabase();
 app.use(cors());
 app.use(express.json());
 
-app.use(cors());
 app.use('/auth', authRoute);
-app.use('/characters', CharacterRoute);
+app.use('/influencers', InfluencerRoute);
 app.use('/users', userRoute);
 app.use('/api-docs', swaggerRoute);
 
 app.listen(port, () => {
-  console.log(`Servidor rodando na porta ${port}`);
+  console.log(`Server is running on http://localhost:${port}`);
 });
