# src/models/usermodel.js
@@ -16,6 +16,13 @@ const UserSchema = new mongoose.Schema({
     required: true,
     unique: true,
     lowercase: true,
+    validate: {
+      validator: function(v) {
+        // A simple regex for email validation
+        return /\S+@\S+\.\S+/.test(v);
+      },
+      message: props => `${props.value} is not a valid email!`
+    },
   },
   password: {
     type: String,
@@ -26,8 +33,21 @@ const UserSchema = new mongoose.Schema({
     type: String,
     required: true,
   },
+  influencers: [{
+    type: mongoose.Schema.Types.ObjectId,
+    ref: 'Influencer',
+  }],
+});
+
+
+UserSchema.pre('save', async function(next) {
+  const hash = await bcrypt.hash(this.password, 10);
+  this.password = hash;
+  
+  next();
 });
 
 const User = mongoose.model('User', UserSchema);
 
 module.exports = User;
+
