# swagger-output.json
@@ -1,22 +1,21 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "My API",
-    "description": "Documentation automatically generated by the <b>swagger-autogen</b> module",
+    "title": "API de Gerenciamento de Influenciadores",
+    "description": "Documentação gerada automaticamente pelo módulo <b>swagger-autogen</b>",
     "version": "1.0.0"
   },
+  "host": "localhost:3000",
   "servers": [
     {
-      "url": "http://localhost:3001/",
-      "description": "API de teste"
-    },
-    {
-      "url": "https://rickandmorryapi.herokuapp.com/",
-      "description": "API de produção"
+      "url": "http://localhost:3001",
+      "description": "API local"
     }
   ],
   "basePath": "/",
-  "schemes": ["https", "http"],
+  "schemes": [
+    "http"
+  ],
   "paths": {
     "/auth/login": {
       "post": {
@@ -42,13 +41,64 @@
           "200": {
             "description": "OK"
           },
-          "400": {
-            "description": "Bad Request"
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
-    "/characters/search": {
+    "/auth/register": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "username": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "photo": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "409": {
+            "description": "Conflict"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/influencers/search": {
       "get": {
         "description": "",
         "parameters": [
@@ -72,11 +122,14 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
-    "/characters/create": {
+    "/influencers/create": {
       "post": {
         "description": "",
         "parameters": [
@@ -91,13 +144,25 @@
             "schema": {
               "type": "object",
               "properties": {
-                "user": {
+                "userId": {
                   "example": "any"
                 },
                 "name": {
                   "example": "any"
                 },
                 "imageUrl": {
+                  "example": "any"
+                },
+                "bio": {
+                  "example": "any"
+                },
+                "socialMediaHandles": {
+                  "example": "any"
+                },
+                "followers": {
+                  "example": "any"
+                },
+                "categories": {
                   "example": "any"
                 }
               }
@@ -113,27 +178,20 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
-    "/characters": {
+    "/influencers/": {
       "get": {
         "description": "",
         "parameters": [
           {
             "name": "authorization",
             "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "limit",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "offset",
-            "in": "query",
             "type": "string"
           }
         ],
@@ -146,11 +204,14 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
-    "/characters/find/{id}": {
+    "/influencers/find/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -175,11 +236,14 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
-    "/characters/update/{id}": {
+    "/influencers/update/{id}": {
       "put": {
         "description": "",
         "parameters": [
@@ -205,6 +269,18 @@
                 },
                 "imageUrl": {
                   "example": "any"
+                },
+                "bio": {
+                  "example": "any"
+                },
+                "socialMediaHandles": {
+                  "example": "any"
+                },
+                "followers": {
+                  "example": "any"
+                },
+                "categories": {
+                  "example": "any"
                 }
               }
             }
@@ -214,16 +290,19 @@
           "200": {
             "description": "OK"
           },
-          "400": {
-            "description": "Bad Request"
-          },
           "401": {
             "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
-    "/characters/delete/{id}": {
+    "/influencers/delete/{id}": {
       "delete": {
         "description": "",
         "parameters": [
@@ -248,6 +327,9 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -287,6 +369,12 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "409": {
+            "description": "Conflict"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -310,6 +398,19 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api-docs/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
